# claude-usage

./: .env.example  .gitignore  CLAUDE.md  CONFIGURATION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  Cargo.toml  GOOBITS_INTEGRATION.md  PERFORMANCE_EXPECTATIONS.md  PROPOSAL.md  PROPOSAL_CLOUDKEEPER_INTEGRATION.md  PROPOSAL_ERROR_RECOVERY.md  PROPOSAL_LIVE_MODE.md  PROPOSAL_REALTIME_MONITORING.md  README.md  STREAMING_PARSER_README.md  TODO.md  VALIDATION_CHECKLIST.md  analyze_duplicates.py  claude-usage  claude-usage.py  claude-usage.toml  claude-usage.toml.example  claude_usage.py  claude_usage_max.py  debug_claude_keeper.rs  debug_comparison.py  debug_dedup_test.rs  debug_deduplication.py  debug_nodejs_parsing.py  debug_parser.rs  examine_duplicate_nature.py  goobits.yaml  install.sh  node_modules  pyproject.toml  quantify_dedup_impact.py  setup.sh  test_basic_compilation.rs  test_config.sh  validate_streaming.sh  (+2 more)
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: test.yml
2-delete/: README.md  claude_plan_config.json  conversation_analysis.py  conversation_duration_analysis_report.md  create_sliding_window_detector.py  debug_limit_detection.py  debug_limit_detection_real.py  debug_limit_messages.py  detailed_conversation_analysis.py  enhanced_limit_detector.py  five_hour_window_analysis.py  limit_detection_analysis_report.md  limit_detection_framework.py  limit_detection_patterns.json  limit_detection_results.json  session_blocks_analysis.py  session_blocks_analysis_results.json  session_end_pattern_analysis.py  simple_limit_finder.py  sliding_window_debug.py  sliding_window_plan_detector.py  usage_analysis.json  usage_pattern_report.md
benches/: README.md  main.rs  parser_benchmark.rs
benchmarks/: run_benchmarks.sh
claude_usage.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
claude_usage_max.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
configs/: README.md  development.toml  docker.toml  production.toml
examples/: check_date.rs  compare_dates.rs  config_demo.rs  debug_files.rs  demo_parser.rs
rust/: Cargo.toml  README.md
rust/src/: analyzer.rs  dedup.rs  display.rs  lib.rs  main.rs  models.rs  monitor.rs  parser.rs  pricing.rs  utils.rs
rust/tests/: test_dedup.rs  test_display.rs  test_parser.rs
scripts/: analyze_benchmarks.sh  build_all.sh  compare_performance.sh  install_rust.sh  package.sh  test_benchmarks.sh  test_real_data.sh
src/: analyzer.rs  ccusage_compat.rs  config.rs  dedup.rs  display.rs  file_discovery.rs  keeper_integration.rs  lib.rs  litellm_pricing.rs  logging.rs  main.rs  memory.rs  models.rs  monitor.rs  parser.rs  parser_wrapper.rs  pricing.rs  reports.rs  session_utils.rs  timestamp_parser.rs
src/commands/: live.rs  mod.rs
src/display/: mod.rs  state.rs  tui.rs  widgets.rs
src/live/: baseline.rs  mod.rs  orchestrator.rs  watcher.rs
src/parquet/: mod.rs  reader.rs
test_claude_home/.claude/projects/debug_project/: conversation.jsonl
tests/: README.md  config_test.rs  display_test.rs  integration_e2e_test.rs  keeper_integration_test.rs  memory_integration_test.rs  parser_wrapper_test.rs  streaming_test.rs  test_dedup.rs  test_display.rs  test_parser.rs  test_suite_validation.rs
tests/common/: mod.rs
