[package]
name = "claude-usage"
version = "1.0.1"
description = "Fast Rust implementation for Claude usage analysis across multiple VMs"
authors = [""]
license = "MIT"
edition = "2021"
rust-version = "1.70"
readme = "README.md"
repository = ""
homepage = ""
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[dependencies]
# Core CLI and error handling
clap = { version = "4.4", features = ["derive", "color", "suggestions", "cargo"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File system and paths
dirs = "6.0"
walkdir = "2.4"
glob = "0.3"

# Date and time
chrono = { version = "0.4", features = ["serde"] }

# Terminal UI
console = "0.15"
indicatif = "0.17"
tabled = "0.15"
colored = "2.0"
crossterm = "0.27"
ratatui = "0.26"

# Performance and concurrency
dashmap = "5.5"
rayon = "1.8"

# Utilities
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt", "ansi"] }
tracing-appender = "0.2"
uuid = { version = "1.6", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Integration with claude-keeper for schema-resilient parsing
claude-keeper-v3 = { path = "../claude-keeper" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
criterion = "0.5"

[features]
default = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

# Add benchmark configuration
[[bench]]
name = "parser_benchmark"
harness = false

[package.metadata.docs.rs]
all-features = true