[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-usage-max"
version = "1.0.0"
description = "Fast Python implementation for Claude usage analysis across multiple VMs"
authors = [{name = "Miko", email = "miko@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
]
keywords = ["claude", "usage", "analysis", "ai", "tokens", "cost"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
claude-usage-max = "claude_usage_max:main"
cusage = "claude_usage_max:main"

[project.urls]
Homepage = "https://github.com/miko/claude-usage-max"
Repository = "https://github.com/miko/claude-usage-max"

[tool.setuptools]
py-modules = ["claude_usage_max"]