[package]
name = "claude-usage"
version = "1.0.0"
edition = "2021"
description = "Fast Rust implementation for Claude usage analysis across multiple VMs"
license = "MIT"
authors = ["Miko <miko@example.com>"]
repository = "https://github.com/miko/claude-usage"
keywords = ["claude", "usage", "analysis", "ai", "tokens", "cost"]

[[bin]]
name = "claude-usage"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.7"
dirs = "5.0"
glob = "0.3"
anyhow = "1.0"
colored = "2.0"
indicatif = "0.17"
dashmap = "5.5"
once_cell = "1.19"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.8"

[[bench]]
name = "main"
harness = false